# tensorflow-service

./: .gitignore  .pre-commit-config.yaml  .pylintrc  DOCS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
ai_auto_challenge/: mnist_model_creation.py
app/: main.py  predictor.py
app/predictors/flowers_colour/: saved_model.pb
app/predictors/flowers_colour/variables/: variables.index
app/predictors/mnist_cnn/: saved_model.pb
app/predictors/mnist_cnn/variables/: variables.data-00000-of-00001  variables.index
app/predictors/mnist_dropout/: saved_model.pb
app/predictors/mnist_dropout/variables/: variables.data-00000-of-00001  variables.index
app/predictors/mnist_model/variables/: variables.data-00000-of-00001
mnist_model/: saved_model.pb
mnist_model/variables/: variables.index
scripts/: mnist_model_creation.py
tests/: conftest.py  locustfile.py  test_ai_auto_challenge.py  test_app.py  test_predictor.py
