[tool.poetry]
name = "ai-auto-challenge"
version = "0.1.0"
description = ""
authors = ["Hong Xia <hong.xia@harrison.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.5"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
