[tool.poetry]
name = "ai-auto-challenge"
version = "0.1.0"
description = "A service that returns predictions with certainty"
authors = ["martinabeleda <martin.abeleda@gmail.com>"]
repository = "https://github.com/martinabeleda/ai-auto-challenge/"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4"
fastapi = "^0.63.0"
celery = "^5.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.5"
pylint = "^2.6.0"
black = "^20.8b1"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
